@@ -21,7 +21,8 @@
 
 <p>Now some verbatim text:</p>
 
-<pre><code>SELECT *
+<pre><code>-- Provide a comment
+SELECT *
   FROM users
  WHERE nickname = &#39;theory&#39;;</code></pre>
 
